<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/application_settings">
        <Preference
            android:key="edit_category_preference"
            android:icon="@drawable/baseline_edit_24"
            app:iconTint="@color/primaryColor"
            android:title="@string/edit_categories" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:entries="@array/currency_list"
            android:entryValues="@array/currency_list_values"
            android:key="currency_preference"
            app:iconTint="@color/primaryColor"
            android:icon="@drawable/baseline_currency_exchange_24"
            android:summary="@string/edit_currency_summary"
            android:title="@string/edit_currency" />
    </PreferenceCategory>
    <Preference android:title="@string/edit_limits"
        android:key="monthly_limit_preference"
        android:summary="@string/monthly_limit_summary"
        app:iconTint="@color/primaryColor"
        android:icon="@drawable/baseline_money_off_24" />
    <PreferenceCategory android:title="@string/more_info">
        <Preference
            android:enabled="false"
            android:id="@+id/credits_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="credits_preference"
            android:title="@string/credits" />
        <Preference
            android:id="@+id/report_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="report_problem"
            android:title="@string/report_problem"
            android:icon="@drawable/baseline_bug_report_24" />
        <Preference
            android:enabled="false"
            android:id="@+id/help_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="help_preference"
            android:iconTint="@color/primaryColor"

            android:icon="@drawable/baseline_help_outline_24"
            android:title="@string/questions_and_answers" />
    </PreferenceCategory>
</PreferenceScreen>