<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.legal.AboutUsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:text="@string/about_us_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="20dp"/>
    <TextView
        android:text="@string/about_us_desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/about_us_desc2"
        android:text="@string/about_us_desc_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        />
    <TextView
        android:autoLink="email"
        android:text="@string/about_us_desc_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:text="@string/about_us_conclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>