<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.angelp.purchasehistory.ui.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_scheduled_expenses"
        android:name="com.angelp.purchasehistory.ui.home.scheduled.ScheduledExpensesFragment"
        android:label="@string/title_spectated_users"
        tools:layout="@layout/fragment_scheduled_expenses" />
    <fragment
        android:id="@+id/navigation_qrscanner"
        android:name="com.angelp.purchasehistory.ui.home.qr.QrScannerFragment"
        android:label="@string/title_activity_qrscanner"
        tools:layout="@layout/fragment_qr" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.angelp.purchasehistory.ui.home.profile.ProfileFragment"
        android:label="@string/title_activity_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_edit_profile"
            app:destination="@id/navigation_edit_profile" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_change_password"
            app:destination="@id/navigation_change_password" />
    </fragment>
    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.angelp.purchasehistory.ui.home.profile.EditProfileFragment"
        android:label="@string/title_edit_activity_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.angelp.purchasehistory.ui.home.profile.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

</navigation>