<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.purchasehistory.ui.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_purchases_list"

        android:name="com.example.purchasehistory.ui.home.purchases.ListedPurchasesFragment"
        android:label="@string/title_purchases_list"
        tools:layout="@layout/fragment_listed_purchases" />
    <fragment
        android:id="@+id/navigation_qrscanner"
        android:name="com.example.purchasehistory.ui.home.qr.QrScannerFragment"
        android:label="@string/title_activity_qrscanner"
        tools:layout="@layout/fragment_qr" />
    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.purchasehistory.ui.home.graph.GraphFragment"
        android:label="@string/title_activity_graph"
        tools:layout="@layout/fragment_graph" />

</navigation>