<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- User Info Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_username"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/change_password"
                    app:icon="@drawable/key" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accentColor"
                    android:layout_marginVertical="16dp" />

                <TextView
                    android:id="@+id/averageSpendingPerPurchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:text="@string/average_spending_per_purchase"
                    android:textColor="@color/foreground_color"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/totalSpending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:text="@string/total_spending"
                    android:textColor="@color/foreground_color"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/totalNumberOfPurchases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:text="@string/total_number_of_purchases"
                    android:textColor="@color/foreground_color"
                    android:fontFamily="sans-serif-medium" />

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/categoryAnalytics"
                    android:background="@drawable/card_background"
                    android:backgroundTintMode="screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/mostFrequentlyPurchasedCategoryLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:text="@string/most_frequently_purchased_category"
                        android:textColor="@color/foreground_color"
                        android:fontFamily="sans-serif-medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mostFrequentlyPurchasedCategoryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textAllCaps="true"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mostFrequentlyPurchasedCategoryCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:text="@string/most_frequently_purchased_category_count"
                        android:fontFamily="sans-serif-medium" />

                    <TextView
                        android:id="@+id/mostFrequentlyPurchasedCategorySum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:text="@string/most_frequently_purchased_category_sum"
                        android:fontFamily="sans-serif-medium" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/edit_button"
            android:elevation="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_edit_24"
            android:contentDescription="@string/edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            />

        <Button
            android:id="@+id/download_svg_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/download_data"
            app:icon="@drawable/baseline_download_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_info_card" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/application_settings"
            app:icon="@drawable/baseline_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_link_button" />

        <Button
            android:id="@+id/share_link_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/share_token_description"
            android:text="@string/share_token"
            app:icon="@drawable/baseline_share_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_svg_button" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/logout"
            app:icon="@drawable/baseline_logout_24"
            app:layout_constraintTop_toBottomOf="@+id/settings_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            app:icon="@drawable/baseline_delete_24"
            android:backgroundTint="@color/danger"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logout_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>